cleanup nightly pre-releases on TestPyPI

--- a/.github/workflows/nightly_testpypi_release.yml
+++ b/.github/workflows/nightly_testpypi_release.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   HATCH_VERSION: "1.14.2"
+  PYPI_CLEANUP_VERSION: "0.1.10"
 
 jobs:
   nightly-release:
@@ -15,7 +16,7 @@ jobs:
     # Always build from main for consistency (scheduled and manual runs)
     steps:
       - name: Checkout main
-        uses: actions/checkout@v6
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd  # v6.0.2
         with:
           ref: main
           fetch-depth: 1
@@ -43,3 +44,16 @@ jobs:
           HATCH_INDEX_USER: __token__
           HATCH_INDEX_AUTH: ${{ secrets.HAYSTACK_AI_TESTPYPI_TOKEN }}
         run: hatch publish -r test -y
+
+  # Remove .dev* pre-releases on TestPyPI that are older than 7 days (keeps index manageable).
+  cleanup-old-nightlies:
+    runs-on: ubuntu-latest
+    needs: nightly-release
+    steps:
+      - name: Delete nightly pre-releases older than 7 days from TestPyPI
+        env:
+          PYPI_CLEANUP_PASSWORD: ${{ secrets.HAYSTACK_AI_TESTPYPI_TOKEN }}
+        run: |
+          pip install pypi-cleanup==${{ env.PYPI_CLEANUP_VERSION }}
+          pypi-cleanup -u __token__ -p haystack-ai -t https://test.pypi.org/ \
+            -d 7 --do-it -y -v
